  - Documentation
    - Added test coverage document
    - Updated all the docs to reflect GTest & C++23 switch.
  - Examples
    - New
      - peterdejongEAAO.cpp
      - demo_corners.cpp
      - lorenz_mM.cpp
      - heart2025.cpp
      - duck.cpp
      - heartFrac.cpp
      - feather.cpp
      - mandelbrot_meanOrbit.cpp
      - simone_attractor.cpp
    - Updated
      - newton_z6.cpp: Fixed non-const trig functions for MSVC
      - phoenix.cpp, phoenixD.cpp, phoenixI.cpp: Added OpenMP 2.0 support
  - Miscellaneous
    - Broke utest_colorTpl.cpp up into different files
    - Added IncludeMRMathCPPLib.cmake code
    - Updated version of configure.sh
    - Updated mrw2any.sh &
    - Uniform use of if constexpr.

* 22.0.0.0: Feature & Refactor Release
:PROPERTIES:
:CUSTOM_ID: v22.0.0.0
:END:
  - Fixed Bugs
    - mjr::colorTpl::tfrmMod Added divide by zero check for floating point channels
    - mjr::colorTpl::tfrmDiv Better divide by zero check for floating point channels
    - mjr::colorTpl::tfrmAddDivClamp Better divide by zero check for floating point channels
    - mjr::colorTpl::tfrmLn1 Added non-positive log check for floating point images
    - mjr::colorTpl::tfrmLn Added non-positive log check
  - Known Issues
    - N/A
  - API breaking Changes
    - N/A
  - Deprecated functionality
    - N/A
  - New functionality
    - N/A
  - Documentation
    - N/A
  - Examples
    - New
      - wakOrb01.cpp
      - wakOrb02.cpp
      - wakOrb03.cpp
      - doublePendulum.cpp
      - doublePendulumM.cpp
    - Updated
      - N/A
  - Miscellaneous
    - Replaced BOOST Test with GTest
    - Better check.rb
    - Streamlined CMake configuration
      - Better integration with MRMathCPP
      - Added build directory
      - Just export cmake file and not a package
      - Use exported config for builds
* 21.0.0.0: Feature & Refactor Release
:PROPERTIES:
:CUSTOM_ID: v21.0.0.0
:END:
  - Fixed Bugs
    - clampAll, clampBot, clampTop: now limited to channel arithmetic types