@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-02-23 Sun 00:01 -->
+<!-- 2025-02-23 Sun 15:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-02-22 23:56:03</i></td>
+<td class="org-left"><i>2025-02-23 14:47:57</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-02-23 00:01:36</i></td>
+<td class="org-left"><i>2025-02-23 15:37:40</i></td>
 </tr>
 </tbody>
 </table>
@@ -367,11 +367,13 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>feather.cpp</li>
 <li>mandelbrot_meanOrbit.cpp</li>
 <li>simone_attractor.cpp</li>
+<li>demo_data_and_filter.cpp</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
 <li>newton_z6.cpp: Fixed non-const trig functions for MSVC</li>
 <li>phoenix.cpp, phoenixD.cpp, phoenixI.cpp: Added OpenMP 2.0 support</li>
+<li>renamed mandelbrot_real_cfun.cpp to demo_colorizer.cpp</li>
 </ul></li>
 </ul></li>
 <li>Miscellaneous
