@@ -1,7 +1,7 @@
 // -*- Mode:C++; Coding:us-ascii-unix; fill-column:158 -*-
 /*******************************************************************************************************************************************************.H.S.**/
 /**
- @file      mandelbrot_real_cfun.cpp
+ @file      demo_colorizer.cpp
  @author    Mitch Richling <https://www.mitchr.me>
  @brief     Draw a mandelbrot set using colorizeCanvas.@EOL
  @std       C++20
@@ -53,7 +53,7 @@ int main(void) {
   mjr::ramCanvas3c8b theRamCanvas(1024, 1024, -2.2, 0.8, -1.5, 1.5);
 
   theRamCanvas.colorizeFltCanvas(mandelbrot_esc_fun);
-  theRamCanvas.writeTIFFfile("mandelbrot_real_cfun.tiff");
+  theRamCanvas.writeTIFFfile("demo_colorizer.tiff");
 
   std::chrono::duration<double> runTime = std::chrono::system_clock::now() - startTime;
   std::cout << "Total Runtime " << runTime.count() << " sec" << std::endl;
